--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.AndroidAss"
         tools:targetApi="31">
         <activity
+            android:name=".feb22_1"
+            android:exported="false" />
+        <activity
             android:name=".feb9_1"
             android:exported="false">
             <meta-data
