--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.AndroidAss"
         tools:targetApi="31">
         <activity
+            android:name=".mar1_2"
+            android:exported="false" />
+        <activity
             android:name=".mar1_1"
             android:exported="false" />
         <activity
