--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,6 +14,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidAss"
         tools:targetApi="31">
+        <activity
+            android:name=".mar8_1"
+            android:exported="false" />
         <activity
             android:name=".mar1_2"
             android:exported="false" />
@@ -154,5 +159,4 @@
                 android:value="" />
         </activity>
     </application>
-
 </manifest>
