--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.AndroidAss"
         tools:targetApi="31">
         <activity
+            android:name=".mar29_1"
+            android:exported="false" />
+        <activity
             android:name=".mar23_1"
             android:exported="false" />
         <activity
